# tjpho

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conf.py  exam-info.html  exam-info.md  genindex.html  index.html  index.md  justfile  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  deploy.yml
_sources/: exam-info.md.txt
_sources/old/: index.md.txt  tjpho21.md.txt  tjpho24.md.txt  tjpho26.md.txt
_static/: custom.css
_templates/: description.html
old/: index.html  index.md  tjpho21.html  tjpho22.html  tjpho22.md  tjpho23.html  tjpho23.md  tjpho24.html  tjpho24.md  tjpho25.html  tjpho25.md  tjpho26.html  tjpho26.md
