[project]
name = "tjpho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "rust-just>=1.36.0",
    "sphinx>=8.1.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "sphinx-autobuild>=2024.10.3",
]

[tool.ruff.format]
docstring-code-format = true
